--- a/auth.html
+++ b/auth.html
@@ -8,12 +8,12 @@
     <script>
       // !!!! Replace with your own Firebase settings  !!!!!
       var config = {
-        apiKey: "!! Replace with your own Firebase settings !!",
-        authDomain: "!! Replace with your own Firebase settings !!",
-        databaseURL: "!! Replace with your own Firebase settings !!",
-        storageBucket: "!! Replace with your own Firebase settings !!",
-      };
-      firebase.initializeApp(config);
+        apiKey: 'AIzaSyBgfMAGvnlqEWJz59xSfJ2rrJPjpQPXgDY',
+        authDomain: 'localhost',
+        databaseURL: 'https://playlist-93f0b-default-rtdb.firebaseio.com/',
+        storageBucket: 'gs://playlist-93fob.appspot.com'
+      }
+      firebase.initializeApp(config)
     </script>
     
     <script src="https://www.gstatic.com/firebasejs/ui/live/0.4/firebase-ui-auth.js"></script>
