--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 
     <!-- built files will be auto injected -->
-    <!-- <script src="dist/build.js"></script> -->
+    <!-- <script src="public/build.js"></script> -->
   </body>
 </html>
